# obsidian-utilities

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: vault_migrator.py
tests/vault_migrator/: test_metadata_conversion.py
