[project]
authors = [{name = "Vladyslav Zahorui", email = "vzahorui.dev@gmail.com"}]
dependencies = []
name = "obsidian-utilities"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python-frontmatter = ">=1.1.0,<2"

[tool.pixi.feature.dev.dependencies]
pytest = "*"

[tool.pixi.feature.dev.tasks]
test = "pytest"

[tool.pixi.environments]
dev = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["src"]
